# gpu-2024

./: .clang-format
1_convolution/: 1_convolution_naive.cu  2_convolution_constant.cu  3_convolution_tiled.cu  CMakeLists.txt
1_convolution/professor/: 0_convolution.cpp  1_convolution_gpu.cu  2_convolution_constant.cu  3_convolution_constant_coarsening.cu  4_convolution_tiled.cu  5_convolution_tiled_cache.cu  CMakeLists.txt
2_stencil/: 1_stencil_naive.cu  2_stencil_tiling.cu  3_stencil_coarsening.cu  4_stencil_registers.cu  CMakeLists.txt  README.md
2_stencil/professor/: 0_stencil.cpp  1_stencil_gpu.cu  2_stencil_tiling.cu  3_stencil_coarsening_slicing.cu  4_stencil_register_tiling.cu  CMakeLists.txt
vector_add/: CMakeLists.txt  a.out  report1.nsys-rep  report2.nsys-rep  vector_add.cu
